nexus/k8s/ip-whitelist-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ip-whitelist
spec:
  ipWhiteList:
    sourceRange:
      - "10.100.128.0/24"
      - "96.236.153.239/32"
      - "10.42.0.0/16"
      - "206.210.76.62/32"
