nexus/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  type: LoadBalancer # Changed from NodePort to LoadBalancer
  ports:
    - name: docker-hosted
      port: 9001
      targetPort: 9001
    - name: docker-proxy
      port: 9901
      targetPort: 9901
  selector:
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/name: nexus-repository-manager
