nexus/k8s/docker-hosted.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-hosted
  #namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docker-hosted.gladeos.net`)
      kind: Rule
      services:
        - name: nexus-docker
          port: 9001
      middlewares:
        - name: ip-whitelist
  tls:
    secretName: gladeos-net-tls
