nexus/k8s/docker-proxy.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-proxy
  #namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docker.gladeos.net`)
      kind: Rule
      services:
        - name: nexus-docker
          port: 9901
      middlewares:
        - name: ip-whitelist
  tls:
    secretName: gladeos-net-tls
